# exercises

./: README.md  pyproject.toml
exercism/c/armstrong-numbers/: armstrong_numbers.c  armstrong_numbers.h.gch
exercism/c/difference-of-squares/: a.out  difference_of_squares.c  difference_of_squares.h  tests.out
exercism/c/grains/: a.out  grains.c  tests.out
exercism/c/hamming/: hamming.c  test_hamming.c  tests.out
exercism/c/isogram/: a.out  isogram.c  isogram.h  tests.out
exercism/csharp/lucians-luscious-lasagna/: LuciansLusciousLasagna.cs
exercism/python/anagram/: anagram.py
exercism/python/armstrong-numbers/: armstrong_numbers.py
exercism/python/black-jack/: black_jack.py  black_jack_test.py
exercism/python/bob/: bob.py
exercism/python/clock/: HELP.md  README.md  clock.py  clock_test.py
exercism/python/currency-exchange/: HELP.md  HINTS.md  README.md  exchange.py  exchange_test.py
exercism/python/difference-of-squares/: difference_of_squares.py
exercism/python/ghost-gobble-arcade-game/: HELP.md  HINTS.md  README.md  arcade_game.py  arcade_game_test.py
exercism/python/gigasecond/: gigasecond.py
exercism/python/grains/: grains.py
exercism/python/guidos-gorgeous-lasagna/: HELP.md  HINTS.md  README.md  lasagna.py  lasagna_test.py
exercism/python/hamming/: hamming.py
exercism/python/high-scores/: high_scores.py
exercism/python/isbn-verifier/: isbn_verifier.py
exercism/python/isogram/: HELP.md  README.md  isogram.py  isogram_test.py
exercism/python/leap/: leap.py
exercism/python/little-sisters-vocab/: HELP.md  HINTS.md  README.md  (+2 more)
(+54 files in other folders)
