[tool.poetry]
name = "exercises"
version = "0.1.0"
description = ""
authors = ["Gustavo Sousa <ola@gustavosousa.me>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
blue = "^0.8.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
